Fixes für durchgängige Bestellstrecke

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>sia.studio | {{ renderData.title or title or metadata.title }}</title>
+  <title>Qinkel JAM-Shop | {{ renderData.title or title or metadata.title }}</title>
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <meta property="og:description" content="{{ renderData.description or description or metadata.description }}" />
 
@@ -38,9 +38,7 @@
   <meta property="og:image:height" content="630"> -->
 
   <link rel="icon" href="/images/favicon.png" type="image/png" />
-  <link rel="canonical" href="https://sia.studio{{ page.url }}">
-
-  <meta name="monetization" content="$pay.stronghold.co/1a1a6b5138fcdc84cb29d9b04a798e65540">
+  <link rel="canonical" href="https://qinkel.netlify.app{{ page.url }}">
 
   <link rel="preload" as="font" type="font/woff2" href="/css/fonts/josefin-sans-v14-latin-700.woff2" crossorigin>
 </head>
