--- a/src/shop.njk
+++ b/src/shop.njk
@@ -1,9 +1,9 @@
 ---
 layout: layouts/base.njk
-title: Shop Sia.Studio
+title: Qinkel JAM-Stack Shop
 tags:
   - nav
-navtitle: Shop
+navtitle: Qinkel Shop
 templateClass: tmpl-post
 ---
 
