--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -1,6 +1,6 @@
 ---
 layout: layouts/base.njk
-title: Thank you for your order!
+title: Vielen Dank für Ihre Bestellung!
 templateClass: tmpl-post
 ---
 
@@ -13,12 +13,12 @@ templateClass: tmpl-post
 
   <section class="[ post-list ] [ pad-top-700 gap-bottom-900 ]">
   <div class="[ inner-wrapper ] [ sf-flow ]">
-    <p>You will receive 2 separate emails:</p>
+    <p>Vielen Dank für Ihre Bestellung! Sie werden die folgenden Informationen per E-Mail erhalten:</p>
     <ol>
-      <li>The receipt for your purchase</li>
-      <li>The download link(s) for your files</li>
+      <li>Ihre Rechnung</li>
+      <li>Informationen zum Versand Ihrer Ware</li>
     </ol>
-    <p>If you do not see the second email with your downloads within a few minutes of completing payment, please <strong>check your junk folder</strong>. If you continue to have any issues, please contact me at <a href="mailto:sia@sia.studio">sia@sia.studio</a>.</p>
+    <p>Wenn Sie die Rechnung nicht in den nächsten Minuten erhalten, prüfen Sie bitte  <strong>Ihren E-Mail Spam / Junk Ordner</strong>. Sollten weiterhin Probleme auftreten, kontaktieren Sie uns bitte unter <a href="office@qinkel.com">office@qinkel.com</a>.</p>
   </div>
 </main>
 
