Fullfillment einrichten und Layout an Qinkel.com anpassen

--- a/src/index.njk
+++ b/src/index.njk
@@ -3,62 +3,215 @@ layout: layouts/home.njk
 tags:
   - nav
 navtitle: Home
+title: "Qinkel Magnetkugeln"
+description: "Qinkel. Das spannende 3D Puzzel aus Neodym Magneten."
 date: 2020-12-05
 ---
 
-<main id="main-content" tabindex="-1">
-  <header class="[ intro ] [ pad-top-900 pad-bottom-max ]">
-    <div class="[ inner-wrapper ] [ sf-flow ]">
-      <h1 class="[ intro__heading{{ ' intro__heading--compact' if page.url === '/' }} ] [ text-800 md:text-900 leading-tight ] [ p-name ]">sia.studio</h1>
-        <div class="[ intro__summary ] [ sf-flow ] [ leading-mid measure-short ]">Hi, I'm Sia. I love art, crafts, and flavors. Join me on my journey to creative discovery.</div>
-    </div>
-  </header>
-  <section class="[ post-list ] [ pad-top-700 gap-bottom-900 ]">
-    <div class="[ inner-wrapper ] [ sf-flow ]">
-      <h2 class="[ post-list__heading ] [ text-700 md:text-800 ] gap-top-300">My Work</h2>
-
-      <article class="work-article">
-        <img src="/images/figure.jpg"
-          alt="Charcoal female figure sketch framed and sitting on distressed wood floor leaning on a white brick wall">
-        <h3>Artwork</h3>
-        <p class="gap-bottom-300">Charcoal figure drawings on paper and vintage book pages and sheet music. Original art and digital downloads
-          available for purchase.</p>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="https://www.etsy.com/shop/DesignsBySiaShop">Shop artwork</a>
-      </article>
-
-      <article class="work-article">
-        <img src="/images/coloring.jpg" alt="Coloring pages with scenes of Greece">
-        <h3>Hand-Drawn Coloring Pages and Book</h3>
-        <p class="gap-bottom-300">Beautiful, hand-drawn images of Greece for coloring or watercolor. Inspired by the artist’s original photography, ancient frescoes, ancient and biblical mosaics, and Orthodox icons.</p>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="http://www.amazon.com/dp/1532862741">Shop coloring book</a>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="https://www.etsy.com/shop/DesignsBySiaShop">Shop digital downloads</a>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="/files/postcards.pdf">Download free postcards</a>
-      </article>
-
-      <article class="work-article">
-        <img src="/images/pineapple_wrist_cuff.jpg"
-          alt="Crochet lace bracelet on a woman's wrist">
-        <h3>Original Crochet Patterns</h3>
-        <p class="gap-bottom-300">Exquisitely designed pieces that are inspired by vintage crochet techniques, and updated in new and interesting ways. Check out free patterns on <a href="/tags/crochet/">my blog</a>.</p>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="https://www.etsy.com/shop/CrochetBySia">Shop digital downloads</a>
-        <a class="[ button ] [ font-base text-base weight-bold ] gap-right-300" href="/tags/crochet/">Read blog</a>
-      </article>
-
-    </div>
-  </section>
-
-  <hr>
-
-  {# Posts list #}
-  {% set postListHeading = 'Select posts' %}
-  {% set postListItems = collections.posts | getSelect %}
-  {% include "postslist.njk" %}
-
-  {# Archive link #}
-  {% if postListItems.length < collections.posts.length %}
-    {% set paginationNextText = 'All posts' %}
-    {% set paginationNextUrl = '/posts/' %}
-  {% endif %}
-
-  {% include "pagination.njk" %}
-</main>
+    <section class="u-align-center u-clearfix u-image u-shading u-section-1" id="carousel_830e" data-image-width="2000" data-image-height="2000">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h2 class="u-text u-text-body-alt-color u-text-default u-text-1"> Entdecke mit den  Qinkel Magnetkugeln wieder Deine Kreativität!</h2>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-container-align-center-xs u-grey-5 u-valign-top-lg u-valign-top-md u-valign-top-sm u-valign-top-xl u-section-2" id="carousel_63e2">
+      <div class="u-align-center u-container-style u-custom-color-2 u-expanded-width u-group u-shape-rectangle u-group-1">
+        <div class="u-container-layout u-container-layout-1">
+          <h2 class="u-text u-text-white u-text-1"> Sei kreativ und baue Deine eigenen Figuren mit den superstarken Qinkel Neodym Magnetkugeln!&nbsp;<br>Du wirst nicht aufhören können…
+          </h2>
+        </div>
+      </div>
+      <div class="u-layout-grid u-list u-list-1">
+        <div class="u-repeater u-repeater-1">
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-white u-list-item-1" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+            <div class="u-container-layout u-similar-container u-container-layout-2">
+              <img src="images/xmas-2.jpg" alt="" class="u-expanded-width u-image u-image-default u-image-1" data-image-width="500" data-image-height="501">
+              <h3 class="u-custom-font u-text u-text-custom-color-2 u-text-2"> Einfach das perfekte Geschenk</h3>
+              <p class="u-text u-text-3"> Das perfekte Geschenk ist eines, was man nicht mehr aus der Hand nimmt!</p>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-2" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+            <div class="u-container-layout u-similar-container u-container-layout-3">
+              <img src="images/Bildschirmfoto2023-12-21um19.39.52.png" alt="" class="u-expanded-width u-image u-image-default u-image-2" data-image-width="1033" data-image-height="1202">
+              <h3 class="u-custom-font u-text u-text-custom-color-2 u-text-4"> Ein Spass für die ganze Familie</h3>
+              <p class="u-text u-text-5"> Wer macht die tollsten Figuren? Finde es doch jetzt heraus.</p>
+            </div>
+          </div>
+          <div class="u-align-center u-container-style u-list-item u-repeater-item u-video-cover u-white u-list-item-3" data-animation-name="customAnimationIn" data-animation-duration="1500" data-animation-delay="500">
+            <div class="u-container-layout u-similar-container u-container-layout-4">
+              <img src="images/startk.jpg" alt="" class="u-expanded-width u-image u-image-default u-image-3" data-image-width="2000" data-image-height="2000">
+              <h3 class="u-custom-font u-text u-text-custom-color-2 u-text-6"> Klein, aber ganz schön Oho!</h3>
+              <p class="u-text u-text-7"> Die Neodymnmagneten sind klein aber haben extrem starke Anziehungskräfte.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-gradient u-section-3" id="carousel_7130">
+      <div class="u-clearfix u-sheet u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-sheet-1">
+        <h2 class="u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-xl u-text-1">Warum Du Qinkel brauchst</h2>
+        <h5 class="u-text u-text-default u-text-2">&nbsp;Exzessiver Medienkonsum frisst Deine Lebenszeit.&nbsp;<br>Hier ein paar Fakten dazu:
+        </h5>
+        <div class="u-expanded-width u-list u-list-1">
+          <div class="u-repeater u-repeater-1">
+            <div class="u-align-center u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-white u-list-item-1">
+              <div class="u-container-layout u-similar-container u-container-layout-1">
+                <h4 class="u-text u-text-palette-1-base u-text-3">Um das&nbsp;<br>6-fache
+                </h4>
+                <p class="u-text u-text-palette-1-dark-2 u-text-4"> erhöht sich laut einer Studie das Risiko für Konzentrationsstörungen,&nbsp;<br> bereits wenn man mehr als eine halbe Stunde Handy am Tag konsumiert.
+                </p>
+              </div>
+            </div>
+            <div class="u-align-center u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-white u-list-item-2">
+              <div class="u-container-layout u-similar-container u-container-layout-2">
+                <h4 class="u-text u-text-palette-1-base u-text-5"> 89% aller Jugendlichen&nbsp;</h4>
+                <p class="u-text u-text-palette-1-dark-2 u-text-6">sind täglich mehr als 250 Minuten online und 60% aller Handyuser klagen über Symptome von digitalem Augenstress nach der<br>Nutzung digitaler Geräte,<br>einschließlich trockener Augen und Kopfschmerzen.
+                </p>
+              </div>
+            </div>
+            <div class="u-align-center u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-video-cover u-white u-list-item-3">
+              <div class="u-container-layout u-similar-container u-container-layout-3">
+                <h4 class="u-text u-text-palette-1-base u-text-7">Tiktok&nbsp;<br>und Co
+                </h4>
+                <p class="u-text u-text-palette-1-dark-2 u-text-8"> Die derzeitige<br>Medienlandschaft mit den<br>kurzen Impulsen schadet<br>wissenschaftlich erwiesen der<br>Konzentration und<br>Stressbewältigung
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-image u-section-4" id="carousel_27bf" data-image-width="970" data-image-height="300">
+      <div class="u-clearfix u-sheet u-sheet-1"></div>
+    </section>
+    <section class="u-align-left u-clearfix u-section-5" id="carousel_d7ee">
+      <h2 class="u-text u-text-default-lg u-text-default-md u-text-default-xl u-text-palette-4-base u-text-1"> Hol Dir Deine lebenslange Garantie&nbsp;</h2>
+      <p class="u-text u-text-2"> Registriere Deine Qinkel Magnetkugeln und geniesse Deine lebenslange <a href="#carousel_d559" class="u-active-none u-border-none u-btn u-button-link u-button-style u-dialog-link u-hover-none u-none u-text-palette-4-dark-1 u-btn-1">Garantie</a>.<a data-href="#carousel_d559">
+          <br>
+        </a>
+      </p>
+      <img class="u-expanded-width-xs u-image u-image-1" src="images/prodbild1.jpg?rand=081e" data-image-width="1080" data-image-height="809">
+      <div class="custom-expanded u-clearfix u-custom-html u-custom-html-1">
+        <div id="mc_embed_shell">
+          <link href="//cdn-images.mailchimp.com/embedcode/classic-061523.css" rel="stylesheet" type="text/css">
+          <style type="text/css"> #mc_embed_signup{background:#fff; false;clear:left; font:14px Helvetica,Arial,sans-serif; width: 600px;}
+        /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+           We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */ </style>
+          <div id="mc_embed_signup">
+            <form action="https://qinkel.us10.list-manage.com/subscribe/post?u=9f0e1a607e01ca48c99fd77c1&amp;id=b9976e538b&amp;f_id=0030dee5f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank">
+              <div id="mc_embed_signup_scroll">
+                <div class="indicates-required">
+                  <span class="asterisk">*</span> indicates required
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-EMAIL">E-Mail-Adresse <span class="asterisk">*</span>
+                  </label>
+                  <input type="email" name="EMAIL" class="email required" id="mce-EMAIL" required="" value="">
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-FNAME">Vorname </label>
+                  <input type="text" name="FNAME" class="text" id="mce-FNAME" value="">
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-LNAME">Nachname </label>
+                  <input type="text" name="LNAME" class="text" id="mce-LNAME" value="">
+                </div>
+                <div class="mc-field-group size1of2">
+                  <label for="mce-BIRTHDAY-month">Geburtstag </label>
+                  <div class="datefield">
+                    <span class="dayfield subfield">
+                      <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="DD" size="2" maxlength="2" name="BIRTHDAY[day]" id="mce-BIRTHDAY-day" value="">
+                    </span> /<span class="monthfield subfield">
+                      <input class="REQ_CSS birthday" type="text" pattern="[0-9]*" placeholder="MM" size="2" maxlength="2" name="BIRTHDAY[month]" id="mce-BIRTHDAY-month" value="">
+                    </span>
+                    <span class="nowrap small-meta">( dd / mm )</span>
+                  </div>
+                </div>
+                <div class="mc-field-group">
+                  <label for="mce-MMERGE6">EAN Code (auf der Rückseite der Verpackung) </label>
+                  <input type="text" name="MMERGE6" class="text" id="mce-MMERGE6" value="">
+                </div>
+                <div id="mce-responses" class="clear foot">
+                  <div class="response" id="mce-error-response" style="display: none;"></div>
+                  <div class="response" id="mce-success-response" style="display: none;"></div>
+                </div>
+                <div aria-hidden="true" style="position: absolute; left: -5000px;"> /* real people should not fill this in and expect good things - do not remove this or risk form bot signups */ <input type="text" name="b_9f0e1a607e01ca48c99fd77c1_b9976e538b" tabindex="-1" value="">
+                </div>
+                <div class="optionalParent">
+                  <div class="clear foot">
+                    <input type="submit" name="subscribe" id="mc-embedded-subscribe" class="button" value="Subscribe">
+                    <p style="margin: 0px auto;">
+                      <a href="http://eepurl.com/iIbKhw" title="Mailchimp – Einfaches, schnelles E-Mail-Marketing">
+                        <span style="display: inline-block; background-color: transparent; border-radius: 4px;">
+                          <img class="refferal_badge" src="https://digitalasset.intuit.com/render/content/dam/intuit/mc-fe/en_us/images/intuit-mc-rewards-text-dark.svg" alt="Intuit Mailchimp" style="width: 220px; height: 40px; display: flex; padding: 2px 0px; justify-content: center; align-items: center;">
+                        </span>
+                      </a>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </form>
+          </div>
+          <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js"></script>
+          <script type="text/javascript">(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[5]='BIRTHDAY';ftypes[5]='birthday';fnames[6]='MMERGE6';ftypes[6]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';/*
+ * Translated default messages for the $ validation plugin.
+ * Locale: DE
+ */
+$.extend($.validator.messages, {
+  required: "Dieses Feld ist ein Pflichtfeld.",
+  maxlength: $.validator.format("Geben Sie bitte maximal  Zeichen ein."),
+  minlength: $.validator.format("Geben Sie bitte mindestens  Zeichen ein."),
+  rangelength: $.validator.format("Geben Sie bitte mindestens  und maximal {1} Zeichen ein."),
+  email: "Geben Sie bitte eine gültige E-Mail Adresse ein.",
+  url: "Geben Sie bitte eine gültige URL ein.",
+  date: "Bitte geben Sie ein gültiges Datum ein.",
+  number: "Geben Sie bitte eine Nummer ein.",
+  digits: "Geben Sie bitte nur Ziffern ein.",
+  equalTo: "Bitte denselben Wert wiederholen.",
+  range: $.validator.format("Geben Sie bitten einen Wert zwischen {0} und {1}."),
+  max: $.validator.format("Geben Sie bitte einen Wert kleiner oder gleich {0} ein."),
+  min: $.validator.format("Geben Sie bitte einen Wert größer oder gleich {0} ein."),
+  creditcard: "Geben Sie bitte ein gültige Kreditkarten-Nummer ein."
+});}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+        </div>
+      </div>
+    </section>
+    <section class="u-clearfix u-grey-80 u-section-6" id="sec-51e5">
+      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+        <div class="u-align-left u-expanded-width u-left-0 u-video u-video-1">
+          <div class="embed-responsive embed-responsive-1">
+            <iframe style="position: absolute;top: 0;left: 0;width: 100%;height: 100%;" class="embed-responsive-item" src="https://www.youtube-nocookie.com/embed/QlyjJrzQ5eo?mute=0&amp;showinfo=0&amp;controls=0&amp;start=0" frameborder="0" allowfullscreen=""></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-container-align-center-lg u-container-align-center-xl u-palette-1-dark-1 u-section-7" id="sec-9834">
+      <div class="u-align-left u-clearfix u-sheet u-valign-bottom u-sheet-1">
+        <h4 class="u-align-center u-text u-text-default-lg u-text-default-xl u-text-white u-text-1"> Was sagen unsere mehr als 3.000 zufriedenen&nbsp;<br>K​unden?
+        </h4>
+        <div class="u-expanded-width u-list u-list-1">
+          <div class="u-repeater u-repeater-1">
+            <div class="u-container-align-center u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-1">
+                <p class="u-align-center u-text u-text-palette-4-light-2 u-text-2"> “Du wirst wie ich die nur 5mm kleinen, bunten Qinkel Kugeln so schnell nicht mehr weglegen wollen!”<br>
+                  <br>— BIRGIT AUS VORARLBERG<br>
+                </p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-2">
+                <p class="u-align-center u-text u-text-palette-4-light-2 u-text-3"> “Dank des speziellen chemischen Elements (Neodym) sind die Qinkel Magnetkugeln verblüffend anziehend. Das kann ich auch im Büro für meine Zettel gut gebrauchen!”<br>
+                  <br>— MARKUS AUS HANNOVER<br>
+                </p>
+              </div>
+            </div>
+            <div class="u-container-style u-list-item u-repeater-item">
+              <div class="u-container-layout u-similar-container u-valign-top u-container-layout-3">
+                <p class="u-align-center u-text u-text-palette-4-light-2 u-text-4"> “Manche Figuren sind durchaus eine kleine Herausforderung. Mit Hilfe der Splittercard und der Anleitung habe ich tolle Figuren geqinkelt.”<br>
+                  <br>— KARIN AUS MÜNCHEN
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
