--- a/src/shop.njk
+++ b/src/shop.njk
@@ -1,10 +1,11 @@
 ---
-layout: layouts/base.njk
-title: Qinkel JAM-Stack Shop
+layout: layouts/home.njk
 tags:
   - nav
-navtitle: Qinkel Shop
-templateClass: tmpl-post
+navtitle: Shop
+title: "Qinkel Magnetkugeln - Shop"
+description: "JAM-Stack Webshop"
+date: 2024-04-28
 ---
 
 {% set introHeading = title %} {% set introSummary %}{{ content | safe }}{%
