--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -56,7 +56,8 @@
     <meta data-intl-tel-input-cdn-path="intlTelInput/">
   </head>
 
-  <body data-home-page="Startseite.html" data-home-page-title="Startseite" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="de">
+  <!--body data-home-page="Startseite.html" data-home-page-title="Startseite" data-path-to-root="./" data-include-products="false" class="u-body u-xl-mode" data-lang="de"-->
+  <body class="u-body u-xl-mode">
     <header class=" u-border-no-bottom u-border-no-left u-border-no-right u-border-no-top u-clearfix u-header u-section-row-container" id="sec-3385" style="background-image: none">
       <div class="u-section-rows">
         <div class="u-custom-color-2 u-section-row u-section-row-1" id="sec-f3f8">
