--- a/src/css/Startseite.css
+++ b/src/css/Startseite.css
@@ -1050,3 +1050,24 @@
     margin-top: 72px;
   }
 }
+
+/* [1] The container */
+.img-hover-zoom {
+  height: 300px; /* [1.1] Set it as per your need */
+  overflow: hidden; /* [1.2] Hide the overflowing of child elements */
+}
+
+/* [2] Transition property for smooth transformation of images */
+.img-hover-zoom img {
+  transition: transform .5s ease;
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-hover-zoom:hover img {
+  transform: scale(1.5);
+}
+
+/* [3] Finally, transforming the image when container gets hovered */
+.img-text-blue:hover p {
+  color: #71e5f0;
+}
