--- a/src/css/nicepage.css
+++ b/src/css/nicepage.css
@@ -3188,7 +3188,7 @@ base {
   display: none;
 }
 a {
-  color: #259bca;
+  /*color: #259bca;*/
   text-decoration: none;
 }
 a:hover {
@@ -43126,7 +43126,7 @@ a.u-link.u-text-hover-grey-90:hover {
         .u-image:not(.u-shading) > .u-container-layout > a,
         a
         {
-        color: #eafbfd;
+        /*color: #eafbfd;*/
         }
         .u-overlap.u-overlap-transparent:not(.u-overlap-contrast) .u-header :not(.u-nav-item) > a:hover,
         .u-gradient > .u-container-layout > a:hover,
