--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -9,14 +9,11 @@ date: 2024-04-28
 ---
     <section class="u-clearfix" id="sec-a226">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h2 class="u-text u-text-custom-color-2 u-text-default u-text-1">Vielen Dank für Ihre Bestellung</h2>
+        <h2 class="u-text u-text-custom-color-2 u-text-default u-text-1">Vielen Dank für deine Bestellung</h2>
         <p class="u-text u-text-default u-text-2"> Stetho&nbsp;OG<br>
-          Vielen Dank für Ihre Bestellung! Sie werden die folgenden Informationen per E-Mail erhalten:</p>
-        <ol>
-          <li>Ihre Rechnung</li>
-          <li>Informationen zum Versand Ihrer Ware</li>
-        </ol>
-        <p>Wenn Sie die Rechnung nicht in den nächsten Minuten erhalten, prüfen Sie bitte  <strong>Ihren E-Mail Spam / Junk Ordner</strong>. Sollten weiterhin Probleme auftreten, kontaktieren Sie uns bitte unter <a href="office@qinkel.com">office@qinkel.com</a>.
+          Vielen Dank für deine Bestellung und viel Spaß mit deinen Qinkel® Maknetkugeln!<br/><br/>Wir melden uns umgehend bei dir mit den Informationen zum Versand.</p>
+
+        <p>Sollten Fragen oder Probleme auftreten, bitte kontaktiere uns unter <a href="office@qinkel.com">office@qinkel.com</a>.
         </p>
       </div>
     </section>
