--- a/src/shop.njk
+++ b/src/shop.njk
@@ -19,7 +19,7 @@ endset %}
         <div class="u-expanded-width u-list u-list-1">
           <div class="u-repeater u-repeater-1">
             {% for price in prices %}
-              <a href="/product">
+              <a href="/{{ price.product.name | slug}}.html">
                 <div class="u-align-center u-container-style u-list-item u-radius-20 u-repeater-item u-shape-round u-white u-list-item-1" style="margin-top: 20px; margin-bottom: 20px; margin-right: 20px; margin-left: 20px;">
                   <div class="u-container-layout u-similar-container u-container-layout-1">
                     <div class="img-hover-zoom">
