--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -133,7 +133,7 @@
           <div class="u-layout-row">
             <div class="u-align-left u-container-style u-layout-cell u-size-15-lg u-size-16-md u-size-16-sm u-size-16-xs u-size-17-xl u-layout-cell-1">
               <div class="u-container-layout u-container-layout-1">
-                <p class="u-align-left u-text u-text-1">SteTho OG<br>Maria Hilferstrasse 136/1,10<br>1050 Wien/Austria<br>Tel.​ +43 (0)1-961 01 00<br>www.qinkel.com
+                <p class="u-align-left u-text u-text-1">SteTho OG<br>Mariahilfer Strasse 136/1 Top 10<br>1050 Wien/Austria<br>Tel.​ +43 (0)1-961 01 00<br>www.qinkel.com
                 </p>
               </div>
             </div>
